# Intel_Image_Classification

./: AWS_DEPLOYMENT_GUIDE.md  Dockerfile  Important_Info_DL_Model.docx  Important_Info_FastAPI_Docker_AWS.docx  Important_Info_FastAPI_Docker_AWS.rtf  Lambda_function.py  README.md  intel-image-classification.ipynb  main.py  pyproject.toml  test_server.py  train_model.py
.ipynb_checkpoints/: Other_Codes-checkpoint.ipynb  intel-image-classification-checkpoint.ipynb
