[project]
name = "intel-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "kagglehub>=0.4.0",
    "keras>=3.13.1",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "tf2onnx>=1.8.4",
    "uvicorn>=0.40.0",
]
